# micro_mcp

./: .gitignore  CMakeLists.txt  README.md  debug_mqtt.py  deploy.py  enable_remote_mqtt.py  test_antigravity.py  test_hub.py  test_mqtt_hub.py
examples/: device.cpp  device_mqtt.cpp
hub_adapter/: adapter.py  mcp_aggregator.py  mcp_pb2.py  mqtt_adapter.py  tcp_adapter.py
include/micro_mcp/: mcp.pb.h  server.h  transport.h
include/micro_mcp/transport/: posix_mqtt_transport.h  posix_tcp_transport.h
proto/: mcp.options  mcp.proto
src/: mcp.pb.c  posix_mqtt_transport.cpp  posix_tcp_transport.cpp  server.cpp
